Edited Figures.ipynb text

--- a/Figures.ipynb
+++ b/Figures.ipynb
@@ -81,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Each model is described by a text file, which loads the underlying modules (the clock module and the eS6-P module), in Antimony"
+    "Each model is described by a text file, containing two commands which load the underlying modules (the clock module and the eS6-P module), in Antimony"
    ]
   },
   {
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Parameter optimization for eS6-P regulation was performed with a genetic algorithm. Below are the parameters for the best fit, moderate peak model, which we used in our analysis. Modifying the parameters below will effect the results sections 2 through 4"
+    "Parameter optimization for eS6-P regulation was performed with a genetic algorithm. Below are the parameters for the best fit, moderate peak model, which we used in our analysis. Modifying the parameters below will effect the results in sections 2 through 4"
    ]
   },
   {
@@ -163,7 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The contents of individaul module files can view using the following command"
+    "The contents of individual module files can be viewed using the following command"
    ]
   },
   {
@@ -288,7 +288,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Regulation of eS6-P was optimized for performance under three experimental conditions: a normal long-day (16 hours of light, 8 hours of dark) with a wild-type plant, constant light with wild-type plants, and a long-day with a clock-deficient, CCA1 constitutive mutant plant"
+    "Regulation of eS6-P was optimized for performance under three experimental conditions: a  long-day (16 hours of light, 8 hours of dark) with a wild-type plant, constant light with wild-type plants, and a long-day with a clock-deficient, CCA1 constitutive mutant plant"
    ]
   },
   {
@@ -313,7 +313,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we can plot the results of our simulations under each condition. Black curves represent the simulated model, red curves the average of the the observations pooled across Zeitgeber time and the blue point are the individual observations themselves. Gray bar indicate subjective night and the lighter gray bar under in constant light conditions indicates the period of subective night under a long day."
+    "Now, we can plot the results of our simulations under each condition. Black curves represent the simulated model, red curves the average of the the observations pooled across Zeitgeber time and the blue points are the individual observations. Gray shaded regions indicate subjective night and the lighter gray regions in constant light conditions indicates the period of subective night under a long day."
    ]
   },
   {
@@ -349,7 +349,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that the early-day peak under normal conditions above is linked to cycling behavior in the constant light conditions below"
+    "Note that the early-day peak seen in normal conditions above is linked to cycling behavior in the constant light conditions below"
    ]
   },
   {
@@ -451,7 +451,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In addition to the parameters described in Section 1, we also need to provide a list of shifts to describe how the dawn time changes. The plotting function uses this information to simulate the model under each shift condition. The color corresponds to the shift in dawn (purpler indicates earlier than expected, yellow indicates later than expected). The short lines at the bottom of the figure indicate the dawn time. Light blue circle show the peak, early-day eS6-P position."
+    "In addition to the parameters described in Section 1, we also need to provide a list of shifts to describe how the dawn time changes. The plotting function uses this information to simulate the model under each shift condition. The color corresponds to the shift in dawn (purpler indicates earlier than expected, yellow indicates later than expected). The short lines at the bottom of the figure indicate the dawn time. Light blue circles show the peak, early-day eS6-P position."
    ]
   },
   {
@@ -514,7 +514,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As the time of dawn moves, so does the the point at which CCA1/LHY peaks (a eS6-P promoting factor) relative to PRR9/7 (a eS6-P inhibitory factor). To further explore the effect which changing light conditions has on the early day peak, we modified our model to look at the combined effects of shifting both the timing of dusk and dawn. Color indicates the total effect of the shifts on the length of night (purple = later dusk + ealrlier dawn = shorter night, yellow = earlier dusk + later dawn = longer night)"
+    "As the time of dawn moves, so does the the point at which CCA1/LHY (a eS6-P promoting factor) peaks relative to PRR9/7 (a eS6-P inhibitory factor). To further explore the effect which changing light conditions has on the early day peak, we modified our model to look at the combined effects of shifting both the timing of dusk and dawn. Color indicates the total effect of the shifts on the length of night (purple = later dusk + ealrlier dawn = shorter night, yellow = earlier dusk + later dawn = longer night)"
    ]
   },
   {
@@ -646,7 +646,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We used this data to simulate eS6-P under two extremes in the day/night cycles within the range of A. thaliana: Oslo, Norway and Paria Cape Verde"
+    "We used this data to simulate eS6-P under two extremes in the day/night cycle within the range of A. thaliana: Oslo, Norway and Paria Cape Verde"
    ]
   },
   {
@@ -703,14 +703,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we would expect from the previous results, we observe greater variation in eS6-P maximum and minimum values in Oslo (where days very from ~6 to ~19 hours of light), compared to Paria (where days very from ~11 to ~13 hours of light). This is further reflected in the peak metric (the ratio of early day peak height to saturating eS6-P value at the end of the day), which only exceeded 1 in Oslo."
+    "As we would expect from the previous results, we observe greater variation in eS6-P maximum and minimum values in Oslo (where days vary from ~6 to ~19 hours of light), compared to Paria (where days vary from ~11 to ~13 hours of light). This is further reflected in the peak metric (the ratio of early day peak height to saturating eS6-P value at the end of the day), which only exceeded 1 in Oslo."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "However, these ideal curves only account for seasonal changes in the day-night cycle, missing transient variations due to factors like weather. So we also included a model based on downard angled photosynthetic radiation from the Harvard Forest and compared it to in deal model of day-length variation in Boston, Massachusetts."
+    "However, these ideal curves only account for seasonal changes in the day-night cycle, missing transient variations due to factors like weather. So we also included a model based on downard angled photosynthetic radiation from the Harvard Forest and compared it to an ideal model of day-length variation in Boston, Massachusetts."
    ]
   },
   {
@@ -778,7 +778,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using Harvard Forest data, we still observe changes in maximum and minmum values of eS6-P, though the changes in peak height are more constrained compared to the ideal day lengths. The effects of random fluctuations in the day-length can be seen by comparing the peak metric between the Harvard Forest and NOAA data"
+    "Using Harvard Forest data, we still observe changes in maximum and minmum values of eS6-P, though the changes in peak height are more constrained compared to the ideal day lengths. The effects of random fluctuations in the day-length can be seen by comparing the peak metric between the Harvard Forest and NOAA data. Peak metric values are binned by day-length with an interval of 30 minutes."
    ]
   },
   {
@@ -807,6 +807,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The difference in peak metric between Harvard Forest and idealized day-lengths over similar length days indicates that the stability of day-length variation does effect the early day peak response in eS6-P."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 5. Genes with eS6 like phase regression"
    ]
   },
@@ -814,14 +821,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we identified genes in A. thaliana genes with a similar shift in peak phase among a set of circadian clock and light-cycle regulated genes from Dalchau et al. (2010, PNAS) which fell into two categories: Clock Dominated and Clock-light Coregulated."
+    "Finally, we identified genes in A. thaliana genes with a similar shift in peak expreession phase among a set of circadian clock and light-cycle regulated genes from Dalchau et al. (2010, PNAS) which fell into two categories: Clock Dominated and Clock-light Coregulated."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For each group, we then obtained expression profiles for these genes from the Diurnal database (http://diurnal.mocklerlab.org/diurnal_data_finders/new). The plot below show gene expression profiles under long-days (16 hours of light, 8 hours of dark). Colored curves are individual, eS6-P like genes, the black curve is their average, and the dotted black line is the overall average from the group. Clock Dominated genes are in blue, Clock-light Coregulated genes are red."
+    "For each group, we then obtained expression profiles for these genes from the Diurnal database (http://diurnal.mocklerlab.org/diurnal_data_finders/new). The plot below shows gene expression profiles under long-days (16 hours of light, 8 hours of dark). Colored curves are individual, eS6-P like genes, the black curve is their average expression, and the dotted black line is the overall average expression of the group. Clock Dominated genes are in blue, Clock-light Coregulated genes are red."
    ]
   },
   {
@@ -974,7 +981,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Importantly, while these results do not indicate a causal relationship between eS6 and these genes, it does suggest that the type of clock/light regulation we observe in eS6-P may be broadly employed by A. thaliana"
+    "Importantly, while these results do not indicate a causal relationship between the regulation of eS6-P and the regulation of these genes, it does suggest that the type of clock/light regulation we observe in eS6-P may be broadly employed by A. thaliana"
    ]
   }
  ],
